recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value lenght
  forward(lenght)
          ^Tree:4: error: not found: value abs
  tree(steps-1, length*shrink, abs(angle), shrink)
                               ^Tree:5: error: not found: value abs
  tree(steps-1, length*shrink, -abs(angle), shrink)
                                ^